Add AI Prediction Function API
Add AI Prediction Function API.

--- a/master/website/board/templates/board2/cc_manucost_if.html
+++ b/master/website/board/templates/board2/cc_manucost_if.html
@@ -53,8 +53,7 @@
 
       function uploadTemplate()
       {
-          var coCd = document.getElementById("co_cd").value;
-          var coNm = document.getElementById("co_nm").value;
+          var form = document.getElementById("co_cd")
 
           if(coCd == '') {
               alert('법인코드를 입력해주십시오.');
