Update main screen
main screen

--- a/master/website/board/templates/board3/cc_costbill1_if.html
+++ b/master/website/board/templates/board3/cc_costbill1_if.html
@@ -61,7 +61,7 @@
 
 {% include "navbar.html" %}
 {% include "sidebar.html" %}
-
+{% load humanize %}
 <!--main content start-->
 <section id="main-content">
     <section class="wrapper">
@@ -129,7 +129,7 @@
                         {% if rsCostbill1 %}
                         <table class="table">
                             <thead>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th width="20%">모델명</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
@@ -137,115 +137,115 @@
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style="background-color: #e3f2fd;">
                                 <th>생산량</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.생산량}}
+                                    {{i.생산량|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th>표준단가</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.단가}}
+                                    {{i.단가|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style="background-color: #e3f2fd;">
                                 <th>매출액</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.매출}}
+                                    {{i.매출|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th>기초재공품재료비</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.기초제공품합계}}
+                                    {{i.기초제공품합계|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr  style="background-color: #e3f2fd;">
                                 <th>당기투입재료비</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기투입재료비}}
+                                    {{i.당기투입재료비|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr  style="background-color: #e3f2fd;">
                                 <th>당기투입노무비소계</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기투입노무비합}}
+                                    {{i.당기투입노무비합|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr  style="background-color: #e3f2fd;">
                                 <th>당기투입제조경비소계</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기투입제조경비합}}
+                                    {{i.당기투입제조경비합|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr  style="background-color: #e3f2fd;">
                                 <th>당기투입합계</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기투입합계}}
+                                    {{i.당기투입합계|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th>당기사용재료비</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기사용재료비}}
+                                    {{i.당기사용재료비|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th>당기사용노무비소계</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기사용제조원가총액}}
+                                    {{i.당기사용제조원가총액|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th>당기사용제조경비소계</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기사용제조경비합}}
+                                    {{i.당기사용제조경비합|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th>당기사용제조원가합계</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.당기사용제조원가총액}}
+                                    {{i.당기사용제조원가총액|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style="background-color: #e3f2fd;">
                                 <th>타계정으로대체재료비</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.타계정으로대체재료비}}
+                                    {{i.타계정으로대체재료비|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
-                            <tr>
+                            <tr style=" background-color: #bbdefb;">
                                 <th>기말재공품재료비</th>
                                 {% for i in rsCostbill1 %}
                                 <td>
-                                    {{i.기말제공품합계}}
+                                    {{i.기말제공품합계|intcomma}}
                                 </td>
                                 {% endfor %}
                             </tr>
